--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.8.10
+aniso8601==1.2.0
 appdirs==1.4.0
 appnope==0.1.0
 attrs==16.3.0
@@ -12,6 +13,7 @@ convertdate==2.1.0
 coverage==4.3.4
 cryptography==1.7.2
 cssselect==1.0.1
+curl==2017.0.1
 dateparser==0.5.1
 decorator==4.0.11
 defusedxml==0.4.1
@@ -23,6 +25,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.0
 Flask-Migrate==2.0.3
 Flask-OpenID==1.2.5
+Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.6.1
@@ -38,6 +41,9 @@ Jinja2==2.9.5
 lxml==3.7.2
 Mako==1.0.6
 MarkupSafe==0.23
+marshmallow==2.13.0
+marshmallow-jsonapi==0.10.1
+nose==1.3.7
 packaging==16.8
 parsel==1.1.0
 pexpect==4.2.1
@@ -45,6 +51,7 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.13
 psycopg2==2.6.2
 ptyprocess==0.5.1
+py==1.4.32
 pyasn1==0.2.2
 pyasn1-modules==0.0.8
 pycparser==2.17
@@ -52,12 +59,15 @@ PyDispatcher==2.0.5
 Pygments==2.2.0
 pyOpenSSL==16.2.0
 pyparsing==2.1.10
+pytest==3.0.6
+pytest-cov==2.4.0
 python-dateutil==2.6.0
 python-editor==1.0.3
 python3-openid==3.0.10
 pytz==2016.10
 queuelib==1.4.2
 regex==2017.2.8
+requests==2.13.0
 ruamel.yaml==0.13.14
 service-identity==16.0.0
 short-url==1.2.2
