--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.6.1
 Flask-WTF==0.14.2
+gunicorn==19.6.0
 idna==2.2
 incremental==16.10.1
 ipdb==0.10.2
